--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "daisyui": "^2.51.6",
+    "js-image-zoom": "^0.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
@@ -18,6 +19,7 @@
     "react-simple-star-rating": "^5.1.7"
   },
   "devDependencies": {
+    "@types/js-image-zoom": "^0.7.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
