--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.29.12",
+    "axios": "^1.4.0",
     "daisyui": "^2.51.6",
     "js-image-zoom": "^0.7.0",
     "react": "^18.2.0",
