--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "js-image-zoom": "^0.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.1",
     "react-simple-star-rating": "^5.1.7"
