--- a/package.json
+++ b/package.json
@@ -10,19 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tanstack/react-query": "^4.29.12",
-    "axios": "^1.4.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "daisyui": "^2.51.6",
-    "js-image-zoom": "^0.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-icons": "^4.8.0",
+    "react-redux": "^8.1.1",
     "react-router-dom": "^6.11.1",
     "react-simple-star-rating": "^5.1.7"
   },
   "devDependencies": {
-    "@types/js-image-zoom": "^0.7.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
